tests/algorithms/x/Java/divide_and_conquer/strassen_matrix_multiplication.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden299_strassen_matrix_multiplication1148649998/001/Main.java:137: error: method concat in class Main cannot be applied to given types;
            new_matrix = ((int[][])(appendObj(new_matrix, concat(top_left_1[i_4], top_right_1[i_4]))));
                                                          ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden299_strassen_matrix_multiplication1148649998/001/Main.java:142: error: method concat in class Main cannot be applied to given types;
            new_matrix = ((int[][])(appendObj(new_matrix, concat(bot_left_1[i_4], bot_right_1[i_4]))));
                                                          ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
2 errors
